ok JS is written.... and bug squashing has begun

--- a/css/style.css
+++ b/css/style.css
@@ -116,3 +116,7 @@ header p{
 	text-decoration: none;
 }
 
+#errors {
+	color: #ff0000;
+}
+
